// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable Expandable Table With Different Scenarios 1`] = `
.c32 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c35 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c35 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c35 > *:not(:first-child) {
  padding-top: 0;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c27 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c28 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c30 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c34 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c26 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c26,
.c26[type='button'],
.c26[type='reset'],
.c26[type='submit'] {
  -webkit-appearance: button;
}

.c26::-moz-focus-inner,
.c26[type='button']::-moz-focus-inner,
.c26[type='reset']::-moz-focus-inner,
.c26[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c26:-moz-focusring,
.c26[type='button']:-moz-focusring,
.c26[type='reset']:-moz-focusring,
.c26[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  width: inherit;
}

.c16 {
  overflow: hidden;
}

.c20:focus {
  outline: none;
}

.c33 {
  background: #FFFFFF;
}

.c7 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:last-child {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:last-child {
  padding-right: 0;
}

.c29 {
  background: #FFFFFF;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid #0046FF;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c29 > *:first-child {
  padding-left: 0;
}

.c29 > *:last-child {
  padding-right: 0;
}

.c36 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c36 > *:first-child {
  padding-left: 0;
}

.c36 > *:last-child {
  padding-right: 0;
}

.c37 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c37:hover {
  background: #F5F5F5;
}

.c37 > *:first-child {
  padding-left: 0;
}

.c37 > *:last-child {
  padding-right: 0;
}

.c38 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c38 > *:first-child {
  padding-left: 0;
}

.c38 > *:last-child {
  padding-right: 0;
}

.c31 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c8 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: 1px solid #282823;
}

.c10 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:976px) {
  .c32 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c18 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c23 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Expandable Table
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c14 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c24 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c29"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  transform="rotate(-180 12 12)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c30"
                direction="up"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c31"
      role="row"
    >
      <div
        className="c32 c33"
        role="cell"
      >
        <div
          className="c18"
        >
          <ul
            className="c34"
          />
        </div>
        <div
          className="c23"
        >
          <ul
            className="c34 c35"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Only Expandable On Mobile Table
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
  </div>
  <span
    className="c1"
  >
    Controlled Expandable Table
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c14 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c24 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c29"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  transform="rotate(-180 12 12)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c30"
                direction="up"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c31"
      role="row"
    >
      <div
        className="c32 c33"
        role="cell"
      >
        <div
          className="c18"
        >
          <ul
            className="c34"
          />
        </div>
        <div
          className="c23"
        >
          <ul
            className="c34 c35"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c15"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Controlled Expandable Table With Custom Row
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
    <div
      className="c6 c36 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c14 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c37"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c24 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c37"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c38"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  transform="rotate(-180 12 12)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c30"
                direction="up"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c31"
      role="row"
    >
      <div
        className="c32 c33"
        role="cell"
      >
        <div
          className="c18"
        >
          <ul
            className="c34"
          />
        </div>
        <div
          className="c23"
        >
          <ul
            className="c34 c35"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c37"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c37"
      role="row"
    >
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c9 c16"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c17"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c14 c16"
        role="cell"
      >
        <div
          className="c18"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c26 c20"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c28 c25"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Different Font Size For Expand Item On Mobile
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
    <div
      className="c31"
      role="row"
    >
      <div
        className="c32 c33"
        role="cell"
      >
        <div
          className="c18"
        >
          <ul
            className="c34"
          />
        </div>
        <div
          className="c23"
        >
          <ul
            className="c34 c35"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable Flex Table With Different Rows 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c12 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c7 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c17 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c17:hover {
  background: #F5F5F5;
}

.c17 > *:first-child {
  padding-left: 0;
}

.c17 > *:last-child {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:last-child {
  padding-right: 0;
}

.c19 {
  background: #FFFFFF;
  border-bottom: 1px solid #00C8F5;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c19:hover {
  background: #F5F5F5;
}

.c19 > *:first-child {
  padding-left: 0;
}

.c19 > *:last-child {
  padding-right: 0;
}

.c8 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: 1px solid #282823;
}

.c10 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    FlexTable With Different Rows
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <caption
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </caption>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c7"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c17"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c18"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c19"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable Table Custom Data Cells 1`] = `
.c24 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 0 150px;
  -ms-flex: 0 0 150px;
  flex: 0 0 150px;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c27 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c10 {
  width: inherit;
}

.c22 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: 1px solid #282823;
}

.c25 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c19 {
  margin-left: 4px;
}

.c13 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c8 {
  overflow: hidden;
}

.c26 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

.c15 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <caption
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </caption>
  <div
    className="c4 c5 c6"
    role="row"
  >
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Date
        </span>
      </div>
    </div>
    <div
      aria-sort="none"
      className="c12 c8"
      role="columnheader"
    >
      <a
        className="c13"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <div
          className="c14 c15"
        >
          <div
            className="c16 c17"
          >
            <div
              className="c9 c10"
            >
              <span
                className="c11"
              >
                Transferable Quantity
              </span>
            </div>
          </div>
          <div
            className="c16"
          >
            <span
              className="c11"
            >
              USD
            </span>
          </div>
          <div
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c18 c19"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Country
        </span>
      </div>
    </div>
    <div
      className="c20 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Percentage
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c21"
    role="row"
  >
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c12 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          300
        </span>
      </div>
    </div>
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <svg
            className="c24"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c20 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          75
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c21"
    role="row"
  >
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c12 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          100
        </span>
      </div>
    </div>
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        />
      </div>
    </div>
    <div
      className="c20 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c5 c25"
    role="row"
  >
    <div
      className="c7 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        />
      </div>
    </div>
    <div
      className="c12 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        >
          
          400
        </span>
      </div>
    </div>
    <div
      className="c7 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        />
      </div>
    </div>
    <div
      className="c20 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;
